[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
categories = ["api-bindings", "cryptography"]
description = "Raw bindings to libsodium"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR Apache-2.0"
name = "rust_sodium-sys"
links = "sodium"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.10.2"

[dependencies]
lazy_static = "~1.0.0"
libc = "~0.2.40"
rand = "~0.4.2"
unwrap = "~1.2.0"

[build-dependencies]
cc = { git = "https://github.com/vvanders/gcc-rs.git" }
flate2 = "~1.0.1"
libc = "~0.2.40"
pkg-config = "~0.3.9"
http_req = "~0.2.1"
sha2 = "~0.7.0"
tar = "~0.4.15"
unwrap = "~1.2.0"
zip = "~0.3.1"
